--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <input type="text" id="pantalla" disabled>
     <div class="botones">
       <button onclick="limpiar()">C</button>
-      <button onclick="agregar('/')">/</button>
-      <button onclick="agregar('*')">*</button>
+      <button onclick="agregar('÷')">/</button>
+      <button onclick="agregar('x')">*</button>
       <button onclick="borrar()">←</button>
 
       <button onclick="agregar('7')">7</button>
